Actualización de estilos e incorporación de enlaces

--- a/Clase 7S CSS-Curriculum/index.html
+++ b/Clase 7S CSS-Curriculum/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae Danna Velasquez</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,700;1,700&family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+
+
+    <title>Curriculum Vitae Danna Velasquez</title>
 </head>
 <body>
     <header>
         <section class="picture">
-        <h1 class="Titulo">CURRICULUM-VITAE</h1>
+        <h1 class="Titulo">CURRICULUM-VITAE DE DANNA VELÁSQUEZ</h1>
         <img class="Photo-CV" src="/0.png" alt=""">
         </section>
     </header>
     <main>
-        <section class="Title">
-        <h1 class="Titulo">DANNA VELASQUEZ</h1>
+        <section class="description">
+            <a class="yo" href="/sobremi.html">SOBRE MÍ</a>
+            <i class="hoja fab fa-pagelines"></i>
         </section>
         <section class="white-space"></section>
         <section class="Item">
@@ -62,8 +67,12 @@
     <footer>
         <section class="footer">
             <h2 class="finpag">2021. DANNA VELASQUEZ</h2>
-            <img class="Instagram" src="/1.png" alt="">
-            <img class="Linkedin" src="/2.png" alt="">
+            <a class="iconinst" href="https://www.instagram.com/danna_velasquezb/" target="_blank">
+            <i class="iconinst fab fa-instagram"></i></a>
+            <a class="iconlinke" href="https://www.linkedin.com/in/danna-michel-velasquez-blanco-57282a97/" target="_blank">
+            <i class="iconlinke fab fa-linkedin"></i></a>
+            <a class="icongit" href="https://github.com/DannaVelasquez" target="_blank">
+            <i class="icongit fab fa-github"></i></a>
         </section>
     </footer>
 </main>
